[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/bird_orange_0.png" type="Texture" id=1]
[ext_resource path="res://sprites/bird_orange_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/bird_orange_1.png" type="Texture" id=3]
[ext_resource path="res://scripts/bird.gd" type="Script" id=4]
[ext_resource path="res://audio/sfx_wing.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx_die.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/bird_blue_1.png" type="Texture" id=8]
[ext_resource path="res://sprites/bird_red_0.png" type="Texture" id=9]
[ext_resource path="res://sprites/bird_red_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/bird_red_2.png" type="Texture" id=11]
[ext_resource path="res://sprites/bird_blue_2.png" type="Texture" id=12]
[ext_resource path="res://sprites/bird_blue_0.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.5

[sub_resource type="Animation" id=12]
resource_name = "flap"
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_blue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=13]
resource_name = "flying"
length = 2.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_blue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_blue:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_blue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_blue:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "flap"
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_red:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "flying"
length = 2.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_red:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_red:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_red:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_red:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "flap"
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_orange:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=16]
resource_name = "flying"
length = 2.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_orange:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_orange:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=17]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite_orange:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite_orange:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="bird" type="RigidBody2D"]
position = Vector2( 36, 120 )
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 4 )

[node name="anim_sprite_red" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )

[node name="anim_sprite_blue" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -1.71133 )
frames = SubResource( 7 )
frame = 1

[node name="anim_sprite_orange" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -1.61947 )
frames = SubResource( 8 )
frame = 2

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="anim_blue" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.8
anims/flap = SubResource( 12 )
anims/flying = SubResource( 13 )
anims/idle = SubResource( 14 )

[node name="anim_red" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.8
anims/flap = SubResource( 9 )
anims/flying = SubResource( 10 )
anims/idle = SubResource( 11 )

[node name="anim_orange" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.8
anims/flap = SubResource( 15 )
anims/flying = SubResource( 16 )
anims/idle = SubResource( 17 )

[node name="sfx_wing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="sfx_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="sfx_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
